--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "fluid-tailwind": "^1.0.3",
     "postcss": "^8.4.47",
