--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js "
+    "start": "npx nodemon index.js"
   },
-
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
