--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-PORT=8080
-MONGODB_URL=mongodb+srv://touristcation:grJ1xsikaHJ7VbpO@cluster0.coli3kx.mongodb.net/TouristCation?retryWrites=true&w=majority
+ADMIN_KEY=123
