--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.27.0",
