--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
     "buildCommand": "cd frontend && npm run build",
     "outputDirectory": "frontend/build",
     "installCommand": "cd frontend && npm install",
-    "framework": "vite"
+    "framework": "create-react-app"
   }
