--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
+  "version": 2,
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/build",
   "installCommand": "cd frontend && npm install",
   "framework": "create-react-app",
   "functions": {
     "backend_algo/app.py": {
-      "runtime": "python3.9"
+      "runtime": "@vercel/python@3.1.0",
+      "memory": 1024,
+      "maxDuration": 10
     }
   },
   "routes": [
-    { "src": "/predict", "dest": "backend_algo/app.py" },
+    { "src": "/predict", "methods": ["POST"], "dest": "backend_algo/app.py" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": "backend_algo"
+  }
 }
