--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.0.1
 flask-cors==3.0.10
-pandas==1.5.3
+numpy==1.24.3
 scikit-learn==1.0.2
-joblib==1.1.0
-werkzeug==1.0.1
+joblib==1.2.0
+pandas==1.5.3
