--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,7 @@
   "framework": "create-react-app",
   "functions": {
     "api/*.py": {
-      "runtime": "python3.12",
-      "memory": 1024,
-      "maxDuration": 10
+      "runtime": "@vercel/python@3.1.0"
     }
   },
   "routes": [
