--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "chart.js": "^4.4.7",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
+    "papaparse": "^5.5.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -16,7 +17,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
